[package]
name = "bevy_mod_clipboard"
keywords = ["bevy", "gamedev", "clipboard"]
categories = ["game-development"]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ickshonpe/bevy_mod_clipboard"
description = "Bevy clipboard support plugin"

[dependencies]
bevy = { version = "0.17", default-features = false }

[target.'cfg(any(target_os = "windows", target_family = "unix"))'.dependencies]
arboard = { version = "3.6.1", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Navigator", "Clipboard"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }
